--- a/injector/src/main/AndroidManifest.xml
+++ b/injector/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.logoped583st.logopedcomponents">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,13 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LogopedComponents"
         >
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
